# quickfix-py-package

./: .gitignore  README.md  build.sh  package-python.sh  package.sh  setup-os.sh  setup-osx.sh  setup-ubuntu.sh  setup-yum.sh
.github/workflows/: build_wheels.yml
quickfix-py/: README.md  pyproject.toml  quickfix.py  setup.py
quickfix-py/C++/: config_unix.h
quickfix-python/: .gitignore  README.md  setup.py
quickfix-python/C++/: UtilitySSL.cpp
