[project]
name = "quickfix-segy"
version = "1.16.1"
description = "Python package for Quickfix C++, FIX (Financial Information eXchange) protocol implementation"
authors = [{name = "Oren Miller", email="oren@quickfixengine.org"}]
maintainers = [
  {name = "Oren Miller", email="oren@quickfixengine.org"},
  {name = "Mark Guzman", email="segfault@hasno.info"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Office/Business :: Financial',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
homepage = "https://quickfixengine.org"
documentation = "https://quickfixengine.org"
source = "https://github.com/segfault/quickfix-cpp"
download = "https://pypi.org/project/quickfix-segy/#files"

[build-system]
requires = ["scikit-build-core[rich,pyproject]", "uv", "wheel", "build"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "./C++"
wheel.exclude = [ '*.h', 'CMakeFiles' ]
ninja.make-fallback = true
sdist.cmake = true
sdist.reproducible = true
sdist.exclude = [ ".venv", "CMakeCache.txt"]

[tool.scikit-build.cmake.define]
HAVE_PYTHON = true
HAVE_SSL = true
QUICKFIX_EXAMPLES = false
QUICKFIX_TESTS = false
QUICKFIX_SHARED_LIBS = false
IS_PYTHON_PACKAGE_BUILD = true

[tool.cibuildwheel]
build-frontend = "build[uv]"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
musllinux-x86_64-image = "quay.io/pypa/musllinux_1_2_x86_64"
musllinux-aarch64-image = "quay.io/pypa/musllinux_1_2_aarch64"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]
